force-app/main/default/objects/Survey_Answer__c/Survey_Answer__c.object-meta.xml
<CustomObject>
    <label>Survey Answer</label>
    <nameField>
        <displayFormat>SA-{000000}</displayFormat>
        <label>Survey Answer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>