force-app/main/default/objects/Survey_Answer__c/fields/Detail_Response__c.field-meta.xml
<CustomField>
    <fullName>Detail_Response__c</fullName>
    <inlineHelpText>Recipient&apos;s response to the request for additional detail.</inlineHelpText>
    <label>Detail Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>