force-app/main/default/objects/Survey_Answer__c/fields/Detail_Response_Truncated__c.field-meta.xml
<CustomField>
    <fullName>Detail_Response_Truncated__c</fullName>
    <inlineHelpText>First 255 characters of &quot;Response Detail&quot; field. Used for tracking field value history.</inlineHelpText>
    <label>Detail Response (Truncated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>