force-app/main/default/objects/Survey_Answer__c/fields/Follows_Up__c.field-meta.xml
<CustomField>
    <fullName>Follows_Up__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If populated, this answer follows up the related one when an item in the question&apos;s &quot;Answers That Request More Info&quot; is selected.</inlineHelpText>
    <label>Follows Up</label>
    <referenceTo>Survey_Answer__c</referenceTo>
    <relationshipLabel>Follow Ups</relationshipLabel>
    <relationshipName>Follow_Ups</relationshipName>
    <type>Lookup</type>
</CustomField>