force-app/main/default/objects/Survey_Answer__c/fields/Question_Detail_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Question_Detail_Prompt__c</fullName>
    <formula>Survey_Question__r.More_Info_Prompt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question Detail Prompt</label>
    <type>Text</type>
</CustomField>