force-app/main/default/objects/Survey_Answer__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <inlineHelpText>Recipient&apos;s response to the prompt.</inlineHelpText>
    <label>Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>