force-app/main/default/objects/Survey_Answer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Survey_Response__c</columns>
    <columns>Survey_Question__c</columns>
    <columns>Question_Type__c</columns>
    <columns>Question_Prompt__c</columns>
    <columns>Response__c</columns>
    <columns>Question_Detail_Prompt__c</columns>
    <columns>Detail_Response__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>